--- a/Hyakuninisshu/Info.plist
+++ b/Hyakuninisshu/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>GADApplicationIdentifier</key>
 	<string>will replace build phase</string>
 	<key>GADIsAdManagerApp</key>
@@ -27,7 +27,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSUserTrackingUsageDescription</key>
-	<string>This identifier will be used to deliver personalized ads to you.</string>
+	<string>集められた識別子は、あなた向けの広告を配信するために使用されます</string>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
